monitoring/configs/staging/kube-prometheus-stack/grafana-ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.simeonivanov.org`)
      kind: Rule
      middlewares:
        - name: grafana-https-redirect
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
